--- a/css/estilo.css
+++ b/css/estilo.css
@@ -160,6 +160,7 @@ input {
 	font-size: 0.9em;
 	background-color: #fff;
 	border-color: lightgray;
+	width: 96%;
 
 }
 input.submit {
@@ -202,12 +203,12 @@ h3 {
 	padding: 2px;
 	border-bottom: 1px solid #ccc;
 	height: 62px;
+	float: left;
 }
 
 #lista-noticias li a img {
 	float: left;
 	margin: 5px;
-	clear: both;
 }
 
 #lista-noticias li a {
